--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+body {
+  background-image: url('./images/imani-bahati-ut67iFuoD2o-unsplash.jpg');
+  background-size: cover;
+}
+
+/* Login Page */
+
+.login-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 20rem;
+  gap: 0.5rem;
+}
+
+.form-container > input {
+  background-color: rgb(245, 245, 245);
+  border: 1px solid white;
+  padding: 0.5rem;
+  box-shadow: 2px 2px 3px rgb(91, 91, 91);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-container > input::placeholder {
+  text-align: center;
+  font-size: medium;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-container > button {
+  padding: 0.5rem;
+  background-color: rgb(245, 245, 245);
+  border: 1px solid rgb(136, 136, 136);
+  box-shadow: 1px 1px 2px rgb(91, 91, 91);
+  transition: 5s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-container > button:hover {
+  background-color: white;
+  border: none;
+  box-shadow: none;
+  transition: 5s;
+}
+
+span {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 20rem;
+  font-weight: 600;
+  font-size: 2.5rem;
   color: white;
+  text-shadow: 1px 2px 3px rgb(91, 91, 91);
 }
 
-.App-link {
-  color: #61dafb;
+/* Home Page */
+
+.home-container {
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-home-container > input {
+  background-color: rgb(245, 245, 245);
+  border: 1px solid white;
+  border-right: none;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding: 0.5rem;
+  box-shadow: 2px 2px 3px rgb(91, 91, 91);
+  text-align: center;
+}
+
+.form-home-container > button {
+  background-color: rgb(245, 245, 245);
+  border: 1px solid white;
+  border-left: none;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  padding: 0.5rem;
+  box-shadow: 2px 2px 3px rgb(91, 91, 91);
 }
